--- a/portal-frontend/src/styles/buttons.scss
+++ b/portal-frontend/src/styles/buttons.scss
@@ -120,6 +120,6 @@
   color: #fff !important;
 }
 
-.mat-icon-button:hover {
+.mat-mdc-icon-button:hover {
   background-color: rgba($grey, 0.2);
 }
