--- a/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.html
+++ b/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="inline-date-picker-wrapper">
   <span class="left" *ngIf="!isEditing">
     <a (click)="toggleEdit()" class="add-date" *ngIf="!selectedValue"> Add date </a>
     <span *ngIf="selectedValue">
