--- a/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
@@ -2,10 +2,9 @@
   <h2 class="card-title">{{ model.uuid ? 'Update' : 'Create' }} Information Request</h2>
 </div>
 <form (ngSubmit)="onSubmit()" #meetingForm="ngForm">
-  <mat-dialog-content style="height: 100%">
+  <mat-dialog-content>
     <div class="flex-container">
       <div class="flex-child">
-        <label for="startDate">Date requested <span>*</span></label>
         <mat-form-field appearance="outline">
           <mat-label>Date requested</mat-label>
           <input
@@ -24,7 +23,6 @@
       </div>
 
       <div class="flex-child">
-        <label for="endDate">Date fulfilled</label>
         <mat-form-field appearance="outline">
           <mat-label>Date fulfilled</mat-label>
           <input
@@ -43,7 +41,7 @@
     </div>
 
     <div>
-      <mat-form-field class="reason-wrapper">
+      <mat-form-field class="reason-wrapper flex-container">
         <label class="radio-group-label" for="reason">Reason <span color="red">*</span></label>
         <mat-radio-group
           id="reason"
