--- a/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.scss
@@ -3,6 +3,7 @@
 .flex-container {
   display: flex;
   gap: 24px;
+  margin-bottom: 24px;
 }
 
 .flex-child {
@@ -20,8 +21,23 @@ label {
   margin-bottom: 0;
 }
 
+:host::ng-deep {
+  .mat-mdc-form-field {
+    width: 100%;
+  }
+}
+
 .reason-wrapper {
-  width: 90%;
+  width: 100%;
+
+  ::ng-deep .mat-mdc-text-field-wrapper.mdc-text-field {
+    height: unset !important;
+  }
+
+  ::ng-deep.mat-mdc-text-field-wrapper.mdc-text-field .mat-mdc-form-field-flex {
+    height: unset !important;
+  }
+
   mat-radio-button {
     margin: 8px 0 0 0;
     display: block;
