--- a/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.scss
+++ b/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.scss
@@ -1,5 +1,9 @@
 @import '../../../styles/colors';
 
+.inline-date-picker-wrapper {
+  padding-top: 4px;
+}
+
 .editing {
   display: inline-block;
 }
@@ -41,5 +45,34 @@
   .mat-form-field-wrapper {
     padding: 0 !important;
     margin: 0 !important;
+  }
+
+  button mat-icon {
+    overflow: visible;
+  }
+
+  .mat-mdc-icon-button.mat-mdc-button-base {
+    padding: 0 !important;
+  }
+
+  .mat-mdc-text-field-wrapper.mdc-text-field {
+    height: 40px !important;
+
+    .mat-mdc-form-field-flex {
+      .mdc-floating-label.mat-mdc-floating-label {
+        top: 18px;
+      }
+
+      .mdc-floating-label.mat-mdc-floating-label.mdc-floating-label--float-above {
+        top: 28px;
+      }
+
+      height: 40px !important;
+
+      .mat-mdc-form-field-infix {
+        padding-top: 8px !important;
+        padding-bottom: 8px !important;
+      }
+    }
   }
 }
