--- a/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.scss
@@ -1,6 +1,6 @@
 @import '../../../../../styles/colors';
 
-.flex-container {
+.grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 24px;
