--- a/alcs-frontend/src/app/features/application/application-meeting/create-application-meeting-dialog/create-application-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/application-meeting/create-application-meeting-dialog/create-application-meeting-dialog.component.html
@@ -3,7 +3,7 @@
 </div>
 <form (ngSubmit)="onSubmit()" #meetingForm="ngForm">
   <mat-dialog-content style="height: 100%">
-    <div class="flex-container">
+    <div class="grid-container">
       <mat-form-field appearance="outline" class="flex-child">
         <mat-label>{{ data.meetingType.label }} Requested</mat-label>
         <input
