--- a/alcs-frontend/src/app/features/application/application-meeting/create-application-meeting-dialog/create-application-meeting-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/application-meeting/create-application-meeting-dialog/create-application-meeting-dialog.component.scss
@@ -1,8 +1,10 @@
 @import '../../../../../styles/colors';
 
-.flex-container {
-  display: flex;
-  gap: 24px;
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 24px;
+  margin-bottom: 24px;
 }
 
 .flex-child {
