--- a/alcs-frontend/src/app/shared/commenting/comments.component.html
+++ b/alcs-frontend/src/app/shared/commenting/comments.component.html
@@ -1,8 +1,10 @@
 <div class="comments">
-  <div class="subheading2 header">Comments ({{ comments.length }})</div>
-  <mat-form-field *ngIf="!isEditing" class="placeholder-input" appearance="outline" (click)="onEdit()">
-    <input matInput placeholder="Add a comment..." />
-  </mat-form-field>
+  <div>
+    <div class="subheading2 header">Comments ({{ comments.length }})</div>
+    <mat-form-field *ngIf="!isEditing" class="placeholder-input" appearance="outline" (click)="onEdit()">
+      <input matInput placeholder="Add a comment..." />
+    </mat-form-field>
+  </div>
   <app-mention-textarea
     *ngIf="isEditing"
     (create)="onSave($event)"
