--- a/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.scss
@@ -4,63 +4,69 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 24px;
+  grid-row-gap: 24px;
 }
 
-label {
-  font-weight: 500;
-  font-size: 16px;
-  display: block;
-  margin-bottom: 8px;
+.resolution-number-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 16px 0.7fr;
 }
 
-.date-picker {
-  flex: 1 0 auto;
+// label {
+//   font-weight: 500;
+//   font-size: 16px;
+//   display: block;
+//   margin-bottom: 8px;
+// }
 
-  .mat-form-field-appearance-outline .mat-form-field-flex {
-    height: 60px;
-  }
-}
+// .date-picker {
+//   flex: 1 0 auto;
 
-.warning {
-  padding: 16px;
-  font-size: 16px;
-  background-color: rgba($secondary-color, 0.2);
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
+//   .mat-form-field-appearance-outline .mat-form-field-flex {
+//     height: 60px;
+//   }
+// }
 
-  mat-icon {
-    color: $secondary-color-dark;
-    margin-right: 16px;
-  }
-}
+// .warning {
+//   padding: 16px;
+//   font-size: 16px;
+//   background-color: rgba($secondary-color, 0.2);
+//   border-radius: 8px;
+//   display: flex;
+//   align-items: center;
 
-.full-width {
-  grid-column: 1 / 3;
-}
+//   mat-icon {
+//     color: $secondary-color-dark;
+//     margin-right: 16px;
+//   }
+// }
 
-.toggle-label {
-  color: rgba(0, 0, 0, 0.6);
-}
+// .full-width {
+//   grid-column: 1 / 3;
+// }
 
-.resolution-separator {
-  font-size: 20px;
-  margin-top: -10px;
-}
+// .toggle-label {
+//   color: rgba(0, 0, 0, 0.6);
+// }
 
-:host::ng-deep {
-  .mat-button-toggle-group {
-    margin-bottom: 16px;
-  }
+// .resolution-separator {
+//   font-size: 20px;
+//   margin-top: -10px;
+// }
 
-  .mat-form-field-appearance-outline .mat-form-field-prefix {
-    top: 0;
-  }
-}
+// :host::ng-deep {
+//   .mat-button-toggle-group {
+//     margin-bottom: 16px;
+//   }
 
-.criterion-checkbox {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-  padding: 6px;
-}
+//   .mat-form-field-appearance-outline .mat-form-field-prefix {
+//     top: 0;
+//   }
+// }
+
+// .criterion-checkbox {
+//   display: flex;
+//   flex-direction: column;
+//   margin-bottom: 10px;
+//   padding: 6px;
+// }
