--- a/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.scss
+++ b/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.scss
@@ -56,23 +56,23 @@
   }
 
   .mat-mdc-text-field-wrapper.mdc-text-field {
-    height: 40px !important;
+    // height: 56px !important;
 
     .mat-mdc-form-field-flex {
-      .mdc-floating-label.mat-mdc-floating-label {
-        top: 18px;
-      }
+      // .mdc-floating-label.mat-mdc-floating-label {
+      //   top: 18px;
+      // }
 
-      .mdc-floating-label.mat-mdc-floating-label.mdc-floating-label--float-above {
-        top: 28px;
-      }
+      // .mdc-floating-label.mat-mdc-floating-label.mdc-floating-label--float-above {
+      //   top: 28px;
+      // }
 
-      height: 40px !important;
+      // height: 56px !important;
 
-      .mat-mdc-form-field-infix {
-        padding-top: 8px !important;
-        padding-bottom: 8px !important;
-      }
+      // .mat-mdc-form-field-infix {
+      //   padding-top: 8px !important;
+      //   padding-bottom: 8px !important;
+      // }
     }
   }
 }
