--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -297,23 +297,23 @@ mat-button-toggle-group {
   display: none !important;
 }
 
-.mat-mdc-text-field-wrapper.mdc-text-field {
-  height: 40px !important;
+// .mat-mdc-text-field-wrapper.mdc-text-field {
+//   height: 56px !important;
 
-  .mat-mdc-form-field-flex {
-    .mdc-floating-label.mat-mdc-floating-label {
-      top: 18px;
-    }
+//   .mat-mdc-form-field-flex {
+//     .mdc-floating-label.mat-mdc-floating-label {
+//       top: 18px;
+//     }
 
-    .mdc-floating-label.mat-mdc-floating-label.mdc-floating-label--float-above {
-      top: 28px;
-    }
+//     .mdc-floating-label.mat-mdc-floating-label.mdc-floating-label--float-above {
+//       top: 28px;
+//     }
 
-    height: 40px !important;
+//     height: 56px !important;
 
-    .mat-mdc-form-field-infix {
-      padding-top: 8px !important;
-      padding-bottom: 8px !important;
-    }
-  }
-}
+//     .mat-mdc-form-field-infix {
+//       padding-top: 8px !important;
+//       padding-bottom: 8px !important;
+//     }
+//   }
+// }
