--- a/alcs-frontend/src/app/features/application/decision/decision.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision.component.scss
@@ -69,8 +69,10 @@ section {
   }
 
   mat-icon {
+    position: absolute;
+    top: 8px;
+    left: 8px;
     font-size: 21px;
-    line-height: 36px;
     width: 20px;
     height: 36px;
   }
