--- a/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.scss
@@ -2,10 +2,9 @@
 
 .close {
   color: $grey;
-  margin-top: -12px;
-  margin-right: -12px;
   display: flex;
   justify-content: right;
+  margin: -42px 0 0px;
 }
 
 .header-row {
@@ -15,7 +14,7 @@
   margin-bottom: 4px;
 }
 
-.type-label {
+.application-type {
   display: inline-block;
   margin-left: 4px;
   border-radius: 10px;
@@ -23,20 +22,13 @@
   font-size: 11px;
   letter-spacing: 0.01em;
   font-weight: 700;
-  line-height: 18px;
+  line-height: 24px;
   vertical-align: middle;
-  border: 3px solid;
 }
 
 .card-title {
+  align-items: center;
   margin-right: 2rem !important;
-}
-
-.icon {
-  margin-right: 4px;
-  height: 18px;
-  width: 18px;
-  font-size: 18px;
 }
 
 .card-assignee {
@@ -49,11 +41,38 @@
   }
 }
 
+:host::ng-deep .move-board-menu {
+  max-height: 250px;
+}
+
+.board-menu-item {
+  display: grid;
+  grid-template-columns: 22px 1fr 22px;
+  width: 100%;
+}
+
+::ng-deep .mat-mdc-menu-item .mdc-list-item__primary-text {
+  width: 100%;
+}
+
+.favourite-board-icon {
+  height: 20px;
+  margin-top: 2px;
+  font-size: 18px;
+  color: $secondary-color-dark;
+}
+
+.selected-board-icon {
+  height: 20px;
+  margin-top: 2px;
+  font-size: 18px;
+  color: $primary-color;
+}
+
 .priority {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  width: 40px;
   height: 20px;
 }
 
@@ -64,8 +83,8 @@
 .empty-priority {
   background-image: url('/assets/icons/priority_empty.svg');
 }
-
 .select-container {
+  padding-top: 2px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 24px;
@@ -73,7 +92,7 @@
 }
 
 .subtasks-wrapper {
-  margin-top: 36px;
+  margin-top: 24px;
 }
 
 .card-comments-wrapper {
