--- a/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
@@ -30,7 +30,7 @@
         <mat-datepicker #meetingEndDatePicker type="date"> </mat-datepicker>
       </mat-form-field>
     </div>
-    <div class="flex-container">
+    <div class="grid-container">
       <mat-form-field appearance="outline" class="flex-child">
         <mat-label>Report Sent</mat-label>
         <input
