--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -30,13 +30,13 @@
   align-items: center;
 }
 
-button.mat-menu-item {
+button.mat-mdc-menu-item {
   width: auto;
   display: inline-block;
   padding-left: 0 !important;
 }
 
-button.mat-menu-item:hover {
+button.mat-mdc-menu-item:hover {
   background-color: inherit;
 }
 
