--- a/alcs-frontend/src/app/features/home/agrologist/agrologist.component.scss
+++ b/alcs-frontend/src/app/features/home/agrologist/agrologist.component.scss
@@ -47,8 +47,15 @@
 .assignee-column {
   padding-right: 12px;
   min-width: 170px;
+  overflow: inherit;
+
+  .assignee-card-body {
+    overflow: auto;
+  }
 }
 
-.action-column {
-  width: 97px;
+:host::ng-deep .ng-select .ng-select-container {
+  .ng-value-container .ng-input > input {
+    margin-bottom: 0;
+  }
 }
