--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.scss
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.scss
@@ -47,8 +47,19 @@
 .assignee-column {
   padding-right: 12px;
   min-width: 170px;
+  overflow: inherit;
 }
 
 .action-column {
   width: 97px;
+}
+
+.assignee-card-body {
+  overflow: auto;
+}
+
+:host::ng-deep .ng-select .ng-select-container {
+  .ng-value-container .ng-input > input {
+    margin-bottom: 0;
+  }
 }
