Code Review Feedback
* Clean up file uploading

--- a/portal-frontend/src/app/features/edit-application/application-owner-dialog/application-owner-dialog.component.html
+++ b/portal-frontend/src/app/features/edit-application/application-owner-dialog/application-owner-dialog.component.html
@@ -47,7 +47,7 @@
         <app-file-drag-drop
           [uploadedFiles]="files"
           (uploadFiles)="attachFile($event)"
-          (deleteFile)="removeFile($event)"
+          (deleteFile)="removeCorporateSummary()"
           (openFile)="openCorporateSummary()"
           id="fileUpload"
         ></app-file-drag-drop>
