--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.scss
@@ -4,7 +4,7 @@
   color: $grey;
   display: flex;
   justify-content: right;
-  margin: -42px 0 8px;
+  margin: -42px 0 0px;
 }
 
 .header-row {
@@ -48,26 +48,24 @@
 .board-menu-item {
   display: grid;
   grid-template-columns: 22px 1fr 22px;
+  width: 100%;
 }
 
-.favourite-board-icon-container {
-  width: 22px;
-  display: inline-block;
+::ng-deep .mat-mdc-menu-item .mdc-list-item__primary-text {
+  width: 100%;
 }
 
 .favourite-board-icon {
-  width: 18px;
   height: 20px;
+  margin-top: 2px;
   font-size: 18px;
   color: $secondary-color-dark;
 }
 
 .selected-board-icon {
-  width: 18px;
   height: 20px;
+  margin-top: 2px;
   font-size: 18px;
-  margin-left: 8px;
-  margin-right: 4px;
   color: $primary-color;
 }
 
@@ -75,7 +73,6 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  width: 40px;
   height: 20px;
 }
 
@@ -88,6 +85,7 @@
 }
 
 .select-container {
+  padding-top: 2px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 24px;
