--- a/portal-frontend/src/app/features/edit-application/change-application-type-dialog/change-application-type-dialog.component.html
+++ b/portal-frontend/src/app/features/edit-application/change-application-type-dialog/change-application-type-dialog.component.html
@@ -52,7 +52,7 @@
           color="primary"
           required
         >
-          <mat-radio-button *ngFor="let appType of applicationTypes" [value]="appType.code">
+          <mat-radio-button *ngFor="let appType of applicationTypes" [value]="appType.code" class="radio-option">
             {{ appType.portalLabel }}
           </mat-radio-button>
         </mat-radio-group>
