--- a/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.html
+++ b/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.html
@@ -7,7 +7,12 @@
     <div class="steps">
       <div [ngClass]="{ 'step-submission-type': true, 'display-none': currentStepIndex !== 0 }">
         <mat-radio-group (change)="onSubmissionTypeSelected($event)" color="primary">
-          <mat-radio-button *ngFor="let subType of submissionTypes" [value]="subType.code" required>
+          <mat-radio-button
+            *ngFor="let subType of submissionTypes"
+            [value]="subType.code"
+            class="radio-option"
+            required
+          >
             {{ subType.label }}
           </mat-radio-button>
         </mat-radio-group>
@@ -20,7 +25,7 @@
           color="primary"
           required
         >
-          <mat-radio-button *ngFor="let appType of applicationTypes" [value]="appType.code">
+          <mat-radio-button *ngFor="let appType of applicationTypes" class="radio-option" [value]="appType.code">
             {{ appType.portalLabel }}
           </mat-radio-button>
         </mat-radio-group>
@@ -50,9 +55,11 @@
       ></div>
     </div>
     <div>
-      <b class="app-type-label" [ngClass]="{ 'display-none': currentStepIndex !== applicationStep }">{{
-        selectedAppType?.portalLabel
-      }}</b>
+      <b
+        class="app-type-label"
+        [ngClass]="{ 'display-none': currentStepIndex !== applicationStep, 'radio-option': true }"
+        >{{ selectedAppType?.portalLabel }}</b
+      >
     </div>
     <div
       id="appTypeDescription"
