--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
@@ -7,7 +7,7 @@
   <div class="header-row">
     <div class="left">
       <h3 class="card-title">
-        <span class="margin-right">{{ application.fileNumber }} ({{ application.applicant }})</span>
+        <span class="margin-right">{{ cardTitle }}</span>
         <app-application-type-pill [type]="application.type"></app-application-type-pill>
       </h3>
     </div>
@@ -122,6 +122,10 @@
     <app-subtasks [cardUuid]="application.card!.uuid"></app-subtasks>
   </div>
   <div class="card-comments-wrapper">
-    <app-comments [cardUuid]="application.card!.uuid" [fileNumber]="application.fileNumber"></app-comments>
+    <app-comments
+      [cardUuid]="application.card!.uuid"
+      [fileNumber]="application.fileNumber"
+      [notificationTitle]="cardTitle"
+    ></app-comments>
   </div>
 </mat-dialog-content>
