--- a/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.html
@@ -7,7 +7,7 @@
   <div class="header-row">
     <div class="left">
       <h3 class="card-title center">
-        {{ modification.application.fileNumber }} ({{ modification.application.applicant }})
+        {{ cardTitle }}
         <div class="labels">
           <app-application-type-pill [type]="modification.application.type"></app-application-type-pill>
           <app-application-type-pill [type]="modificationType"></app-application-type-pill>
@@ -93,6 +93,6 @@
     <app-subtasks [cardUuid]="modification.card.uuid"></app-subtasks>
   </div>
   <div class="card-comments-wrapper">
-    <app-comments [cardUuid]="modification.card.uuid"></app-comments>
+    <app-comments [notificationTitle]="cardTitle" [cardUuid]="modification.card.uuid"></app-comments>
   </div>
 </mat-dialog-content>
