--- a/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.html
@@ -7,7 +7,7 @@
   <div class="header-row">
     <div class="left">
       <h3 class="card-title center">
-        <span class="margin-right">{{ planningReview.fileNumber }} ({{ planningReview.type }})</span>
+        <span class="margin-right">{{ cardTitle }}</span>
         <app-application-type-pill [type]="planningType"></app-application-type-pill>
       </h3>
     </div>
@@ -73,6 +73,6 @@
     <app-subtasks [cardUuid]="planningReview.card.uuid"></app-subtasks>
   </div>
   <div class="card-comments-wrapper">
-    <app-comments [cardUuid]="planningReview.card.uuid"></app-comments>
+    <app-comments [cardUuid]="planningReview.card.uuid" [notificationTitle]="cardTitle"></app-comments>
   </div>
 </mat-dialog-content>
