--- a/alcs-frontend/src/app/features/board/dialogs/reconsiderations/reconsideration-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/reconsiderations/reconsideration-dialog.component.html
@@ -7,7 +7,7 @@
   <div class="header-row">
     <div class="left">
       <h3 class="card-title">
-        <span class="margin-right">{{ recon.application.fileNumber }} ({{ recon.application.applicant }})</span>
+        <span class="margin-right">{{ cardTitle }}</span>
         <div class="labels">
           <app-application-type-pill [type]="recon.application.type"></app-application-type-pill>
           <app-application-type-pill [type]="reconType"></app-application-type-pill>
@@ -107,6 +107,6 @@
     <app-subtasks [cardUuid]="recon.card.uuid"></app-subtasks>
   </div>
   <div class="card-comments-wrapper">
-    <app-comments [cardUuid]="recon.card.uuid"></app-comments>
+    <app-comments [cardUuid]="recon.card.uuid" [notificationTitle]="cardTitle"></app-comments>
   </div>
 </mat-dialog-content>
