--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -33,11 +33,11 @@
   </mat-step>
   <mat-step label="Proposal">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <p>Proposal (Exclusion)</p>
+    <app-nfu-proposal [$application]='$application'></app-nfu-proposal>
   </mat-step>
   <mat-step label="Upload Attachments">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <p>Proposal (Exclusion)</p>
+    <p>Upload Attachments</p>
   </mat-step>
   <mat-step label="Submit to ALCS (Note: this will be removed in final version)">
     <p>Note this is only for testing purposes. The submission process will be changed in follow-up tickets.</p>
