--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-owners/parcel-owners.component.scss
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-owners/parcel-owners.component.scss
@@ -1,5 +1,5 @@
-@import "../../../../styles/typography";
-@import "../../../../styles/colors";
+@import "../../../../../styles/typography";
+@import "../../../../../styles/colors";
 
 .actions {
   button:not(:last-child) {
