--- a/portal-frontend/src/app/features/edit-application/land-use/land-use.component.html
+++ b/portal-frontend/src/app/features/edit-application/land-use/land-use.component.html
@@ -1,8 +1,15 @@
 <section>
+  <h2>Land Use</h2>
   <div>
-    <h6>Describe the current land use of parcel(s) under application and adjacent parcels.</h6>
+    <p>Describe the current land use of parcel(s) under application and adjacent parcels.</p>
     <app-warning-banner>
-      Please consult the 'What the Commission Considers' page of the ALC website for more information.
+      Please consult the
+      <a
+        href="https://www.alc.gov.bc.ca/application-and-notice-process/applications/what-the-commission-considers/"
+        target="_blank"
+        >'What the Commission Considers'</a
+      >
+      page of the ALC website for more information.
     </app-warning-banner>
   </div>
 
