Other Attachments Page
* Allow null document types
* Add description to documents

--- a/portal-frontend/src/styles.scss
+++ b/portal-frontend/src/styles.scss
@@ -32,6 +32,12 @@ body {
   min-width: rem(240);
 }
 
+a {
+  color: $link-color;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 * {
   box-sizing: border-box;
 }
