--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -37,7 +37,7 @@
   </mat-step>
   <mat-step label="Upload Attachments">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <p>Upload Attachments</p>
+    <app-other-attachments [$application]='$application'></app-other-attachments>
   </mat-step>
   <mat-step label="Submit to ALCS (Note: this will be removed in final version)">
     <p>Note this is only for testing purposes. The submission process will be changed in follow-up tickets.</p>
